private lessons photo wrap. fixes to nav drop down

--- a/src/styles/academic.module.css
+++ b/src/styles/academic.module.css
@@ -18,7 +18,7 @@
     margin-bottom: 10px;;
     max-width: 50%;
   
-    position: relative;
+
     border-radius: 12px;
     border: 2px solid black;
     font-size: 38px;
