--- a/src/styles/performance.module.css
+++ b/src/styles/performance.module.css
@@ -7,13 +7,13 @@
 
     flex: auto;
 
-    padding: 20px 20px;
+    padding: 10px 20px;
     margin: 0 auto;
 
 
     max-width: 50%;
 
-    position: relative;
+
     border-radius: 12px;
 
     font-size: 38px;
