--- a/src/styles/privatelessons.module.css
+++ b/src/styles/privatelessons.module.css
@@ -12,7 +12,7 @@
   margin-bottom: 10px;;
   max-width: 50%;
 
-  position: relative;
+
   border-radius: 12px;
   border: 2px solid black;
   font-size: 38px;
@@ -140,23 +140,43 @@
       font-size: 32px;
       max-width: 80%;
     }
+    .privatelessons__body_container {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      margin: 0 auto;
+      margin-top: 40px;
+  
+  }
+    .privatelessons__body_text{
+      display: flex;
+      max-width: 85%;
+      margin: 10px auto;
+      padding: 0;
+    }
 
     .privatelessons__body_text p {
       font-size: 22px;
     }
+
+    .privatelessons__body_image_container {
+      margin: 20px 0px 20px 0px;
+    }
+
     .privatelessons__body_image_container img {
       display: flex;
       flex-wrap: wrap;
-      max-height: 285px;
-      max-width: 380px;
+      max-height: 385px;
+      max-width: 480px;
 
     }
 
   }
   @media screen and (max-width: 768px) {
-    .privatelessons__body_image_container{
+    /* .privatelessons__body_image_container{
       display: none;
-    }
+    } */
     .privatelessons__body_text{
       max-width: 85%;
       margin: 0 auto;
@@ -170,10 +190,19 @@
       font-size: 22px;
     }
 
+    .privatelessons__body_image_container img {
+      display: flex;
+      flex-wrap: wrap;
+      max-height: 285px;
+      max-width: 380px;
 
+    }
 
   }
   @media screen and (max-width: 450px) {
+        .privatelessons__body_image_container{
+      display: none;
+    }
     .privatelessons__title{
       font-size: 24px;
     }
@@ -181,6 +210,7 @@
       max-width: 85%;
       margin: 0 auto;
       padding: 0;
+      margin-bottom: 20px;
     }
     .privatelessons__body_text p {
       font-size: 18px;
