--- a/src/styles/testimonials.module.css
+++ b/src/styles/testimonials.module.css
@@ -13,7 +13,6 @@
   margin-bottom: 10px;
   max-width: 50%;
 
-  position: relative;
   border-radius: 12px;
 
   font-size: 38px;
